--- a/Solucion/src/app/Cliente/logueo/Usuarios/listar-usuario/listar-usuario.component.html
+++ b/Solucion/src/app/Cliente/logueo/Usuarios/listar-usuario/listar-usuario.component.html
@@ -1,8 +1,14 @@
 <app-header-menu></app-header-menu>
 
 <p-panel >
-  <button pButton pRipple type="button" label="Nuevo" (click)="Nuevo()" icon="pi pi-user" class="p-button-outlined "></button>
+  <button pButton pRipple type="button" label="Nuevo" (click)="Nuevo()" icon="pi pi-user" class="p-button-outlined "></button> &nbsp;
+  <button pButton pRipple type="button" (click)="atras()"     label="atras"  class="p-button-outlined p-button-secondary"></button>
 <br>
+
+<p-dialog header="" *ngIf="display"  [(visible)]="display" >
+  <app-crear-usuario (displaychange)="closedModal()" [UsuarioEditar]="userEdit" ></app-crear-usuario>
+</p-dialog>
+
   <p-table [value]="listUsuarios" [rows]="10"  [paginator]="true"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
     <ng-template pTemplate="header">
@@ -19,7 +25,7 @@
             <td>{{user.username}}</td>
             <td>{{user.nombrerol}}</td>
             <td>
-              <button pButton pRipple type="button" icon="pi pi-pencil" (click)="Edit(user.idUser)" class="p-button-rounded p-button-outlined"></button> &nbsp;
+              <button pButton pRipple type="button" icon="pi pi-pencil" (click)="Edit(user)" class="p-button-rounded p-button-outlined"></button> &nbsp;
               <button pButton pRipple type="button" icon="pi pi-trash" (click)="Delete(user.idUser)" class="p-button-rounded p-button-outlined  p-button-danger"></button>
             </td>
         </tr>
